# cw2

CHC5028-Coursework start codes/: Boss.cpp  Boss.h  CMakeLists.txt  Clowns.cpp  Clowns.h  EnemyObject.cpp  EnemyObject.h  Food.cpp  Food.h  GameObject.cpp  GameObject.h  Room.cpp  Room.h  State.cpp  State.h  Weapon.cpp  Weapon.h  main.cpp  strings.h  wordwrap.cpp  wordwrap.h
